UE-8 Fixed Sticky Video Button on Mobile

--- a/assets/scss/parts/components/layout/_header.scss
+++ b/assets/scss/parts/components/layout/_header.scss
@@ -1,15 +1,16 @@
 .header__wrapper {
+  width: calc(100% - 10px);
+  padding: 0 20px;
   position: absolute;
   display: flex;
   justify-content: space-between;
-  width: calc(100% - 10px);
   align-items: center;
-  padding: 0 20px;
   z-index: 10;
 
   @include for-tablet {
     width: 100%;
     padding: 15px 10px;
+    justify-content: center;
     z-index: 30;
   }
 
@@ -52,12 +53,17 @@
         display: none;
 
         @include for-tablet {
+          width: 100%;
+          left: 0;
+          position: absolute;
           display: flex;
+          justify-content: center;
+          align-items: center;
         }
 
         .burger__button {
-          position: relative;
           height: 100%;
+          position: relative;
           display: block;
           border: 0;
           border-radius: 0;
@@ -66,10 +72,8 @@
           z-index: 999;
 
           @include for-tablet {
-            width: 100%;
             height: 20px;
             top: 83vh;
-            left: calc(-50vw + 73%);
             margin: 0 auto;
           }
 
@@ -113,8 +117,8 @@
 
         .logo__wrapper {
           @include for-tablet {
-            width: 190px;
-            height: auto;
+            width: 245px;
+            height: 80px;
             display: flex;
             align-items: center;
             justify-content: center;
