--- a/assets/scss/parts/components/prismic/_intro.scss
+++ b/assets/scss/parts/components/prismic/_intro.scss
@@ -2,8 +2,8 @@
   position: relative;
 
   @include for-tablet {
-    position: relative;
     height: 100vh;
+    position: relative;
   }
 
   &--media {
@@ -13,8 +13,8 @@
     align-items: center;
 
     @include for-tablet {
-      position: relative;
       height: 100%;
+      position: relative;
     }
 
     .image {
@@ -28,11 +28,11 @@
     }
 
     .video__wrapper {
+      width: 100%;
+      height: 100%;
       top: 0;
       left: 0;
       position: absolute;
-      width: 100%;
-      height: 100%;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -69,31 +69,19 @@
       display: none;
 
       @include for-tablet {
+        width: 100%;
+        height: 100%;
         top: 0;
         left: 0;
         position: absolute;
-        width: 100%;
-        height: 100%;
         display: flex;
         justify-content: center;
         align-items: flex-end;
 
-        &::before {
-          content: "";
-          width: 100%;
-          height: 100%;
-          top: 0;
-          left: 0;
-          position: absolute;
-          background: $brand-primary;
-          opacity: 0.3;
-          z-index: 9;
-        }
-
         &--item {
           width: 130px;
           height: 130px;
-          position: absolute;
+          position: fixed;
           object-fit: cover;
           z-index: 20;
           mix-blend-mode: lighten;
@@ -140,9 +128,9 @@
     }
 
     .title {
+      transform: rotate(-90deg);
       font-size: 65px;
       line-height: 82px;
-      transform: rotate(-90deg);
 
       @include for-tablet {
         margin-right: 50px;
@@ -152,9 +140,9 @@
       }
 
       &:nth-child(2) {
-        transform: rotate(90deg);
         margin-left: 200px;
         margin-top: -100px;
+        transform: rotate(90deg);
 
         @include for-tablet {
           margin-left: 80px;
