--- a/assets/scss/parts/components/prismic/_title-and-description.scss
+++ b/assets/scss/parts/components/prismic/_title-and-description.scss
@@ -1,8 +1,8 @@
 .title-and-description__wrapper {
   width: 100%;
-  display: flex;
   padding: 150px 5vw 200px;
-  background-color: #FFFCE5;
+  display: flex;
+  background-color: #fffce5;
 
   @include for-tablet {
     padding: 100px 5vw 100px;
